--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ input {
 
 .primary_input_field {
   display: block;
-  padding: 1rem 0 1rem 2.25rem;
+  padding: 1rem 0.625rem 1rem 2.25rem;
   background: rgba(217, 217, 217, 0.4);
   font-family: 'Roboto';
   font-weight: normal;
@@ -327,13 +327,14 @@ header div.modal_container div[data-authorization-modal] form fieldset legend {
   text-align: center;
   margin-bottom: 4rem;
 }
-header div.modal_container div[data-authorization-modal] form label {
+header div.modal_container div[data-authorization-modal] form fieldset label {
   display: none;
 }
 header
   div.modal_container
   div[data-authorization-modal]
   form
+  fieldset
   input.primary_input_field {
   width: calc(100% - 2.25rem);
 }
@@ -341,11 +342,17 @@ header
   div.modal_container
   div[data-authorization-modal]
   form
+  fieldset
   input.primary_input_field
   + input {
   margin-top: 4rem;
 }
-header div.modal_container div[data-authorization-modal] form div.form__btns {
+header
+  div.modal_container
+  div[data-authorization-modal]
+  form
+  fieldset
+  div.form__btns {
   display: flex;
   margin-top: 3.0625rem;
   margin-bottom: 5.3125rem;
@@ -357,6 +364,7 @@ header
   div.modal_container
   div[data-authorization-modal]
   form
+  fieldset
   div.form__btns
   input {
   width: 11.875rem;
@@ -375,6 +383,7 @@ header
   div.modal_container
   div[data-authorization-modal]
   form
+  fieldset
   div.form__btns
   input
   + div {
@@ -384,6 +393,7 @@ header
   div.modal_container
   div[data-authorization-modal]
   form
+  fieldset
   div.form__btns
   div {
   display: flex;
@@ -394,6 +404,7 @@ header
   div.modal_container
   div[data-authorization-modal]
   form
+  fieldset
   div.form__btns
   div
   p {
@@ -409,6 +420,7 @@ header
   div.modal_container
   div[data-authorization-modal]
   form
+  fieldset
   div.form__btns
   div
   p
@@ -419,6 +431,7 @@ header
   div.modal_container
   div[data-authorization-modal]
   form
+  fieldset
   div.form__btns
   div
   button {
@@ -691,7 +704,7 @@ main div.profile__wrapper div.progress__info div.progress-bar::after {
   border-radius: 9px;
 }
 main section {
-  margin-top: 6.25rem;
+  margin-top: 4.6875rem;
   width: 100%;
 }
 main section h2[data-score] {
@@ -708,6 +721,7 @@ main section ul[data-question-balls] {
   left: 50%;
   transform: translateX(-50%);
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   margin-bottom: 3.125rem;
 }
@@ -717,6 +731,10 @@ main section ul[data-question-balls] li {
   background: white;
   border-radius: 50%;
   transition: all 300ms ease-out;
+  margin-top: 1.5625rem;
+}
+main section ul[data-question-balls] li + li {
+  margin-left: 0.625rem;
 }
 main section ul[data-question-balls] li.correct {
   background: #86d7b0;
@@ -731,24 +749,32 @@ main section ul[data-quizzes] {
   display: flex;
   width: 31.25rem;
   overflow: hidden;
+  height: -moz-fit-content;
+  height: fit-content;
   margin: auto;
 }
-main section ul[data-quizzes] li {
+main section ul[data-quizzes] > li {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 0fr;
   border-radius: 0.9375rem;
   background: white;
   width: 100%;
   flex-shrink: 0;
   height: -moz-fit-content;
   height: fit-content;
-  transition: transform 500ms linear;
+  transition: transform 500ms linear 0s, grid-template-rows 1.2s ease-out 500ms;
 }
-main section ul[data-quizzes] li + li {
+main section ul[data-quizzes] > li + li {
   margin-left: 2rem;
 }
-main section ul[data-quizzes] li.passed {
-  transform: translateX(-100%);
+main section ul[data-quizzes] > li.expanded {
+  grid-template-rows: 1fr;
 }
-main section ul[data-quizzes] li div.question {
+main section ul[data-quizzes] > li div.test_wrapper {
+  overflow: hidden;
+}
+main section ul[data-quizzes] > li div.test_wrapper div.question {
   background: #5299c7;
   padding: 3.125rem 1.5625rem;
   border-radius: 0.9375rem;
@@ -756,10 +782,10 @@ main section ul[data-quizzes] li div.question {
   flex-direction: column;
   align-items: center;
 }
-main section ul[data-quizzes] li div.question h2 + img {
+main section ul[data-quizzes] > li div.test_wrapper div.question h2 + img {
   margin-top: 1.5625rem;
 }
-main section ul[data-quizzes] li div.question h2 {
+main section ul[data-quizzes] > li div.test_wrapper div.question h2 {
   font-family: 'Outfit';
   font-weight: normal;
   font-size: 2rem;
@@ -767,27 +793,27 @@ main section ul[data-quizzes] li div.question h2 {
   color: white;
   text-align: center;
 }
-main section ul[data-quizzes] li div.question img {
+main section ul[data-quizzes] > li div.test_wrapper div.question img {
   width: 12.5rem;
   aspect-ratio: 3/2;
   -o-object-fit: contain;
   object-fit: contain;
 }
-main section ul[data-quizzes] li ul li {
+main section ul[data-quizzes] > li div.test_wrapper ul li {
   width: 80%;
   margin: auto;
   position: relative;
 }
-main section ul[data-quizzes] li ul li:first-of-type button {
+main section ul[data-quizzes] > li div.test_wrapper ul li:first-of-type button {
   margin-top: 3.125rem;
 }
-main section ul[data-quizzes] li ul li:last-of-type button {
+main section ul[data-quizzes] > li div.test_wrapper ul li:last-of-type button {
   margin-bottom: 3.125rem;
 }
-main section ul[data-quizzes] li ul li + li button {
+main section ul[data-quizzes] > li div.test_wrapper ul li + li button {
   margin-top: 1.875rem;
 }
-main section ul[data-quizzes] li ul li button {
+main section ul[data-quizzes] > li div.test_wrapper ul li button {
   display: inline-block;
   width: calc(100% - 2.5rem);
   border-radius: 0.9375rem;
@@ -804,13 +830,13 @@ main section ul[data-quizzes] li ul li button {
   -moz-user-select: none;
   user-select: none;
 }
-main section ul[data-quizzes] li ul li button.correct {
+main section ul[data-quizzes] > li div.test_wrapper ul li button.correct {
   background: #86d7b0;
 }
-main section ul[data-quizzes] li ul li button.incorrect {
+main section ul[data-quizzes] > li div.test_wrapper ul li button.incorrect {
   background: #f68b8b;
 }
-main section ul[data-quizzes] li ul li button::before {
+main section ul[data-quizzes] > li div.test_wrapper ul li button::before {
   content: '';
   display: inline-block;
   width: 1.25rem;
@@ -823,10 +849,10 @@ main section ul[data-quizzes] li ul li button::before {
   transform: translate(0.625rem, -50%);
   background: white;
 }
-main section ul[data-quizzes] li ul li button.chosen::after {
+main section ul[data-quizzes] > li div.test_wrapper ul li button.chosen::after {
   display: inline-block;
 }
-main section ul[data-quizzes] li ul li button::after {
+main section ul[data-quizzes] > li div.test_wrapper ul li button::after {
   content: '';
   display: none;
   width: 0.9375rem;
@@ -839,10 +865,10 @@ main section ul[data-quizzes] li ul li button::after {
   transform: translate(0.78125rem, -50%);
   background: #5299c7;
 }
-main section ul[data-quizzes] li ul li button:enabled:hover {
+main section ul[data-quizzes] > li div.test_wrapper ul li button:enabled:hover {
   background: rgba(0, 0, 0, 0.12);
 }
-main section ul[data-quizzes] li ul li button:disabled {
+main section ul[data-quizzes] > li div.test_wrapper ul li button:disabled {
   opacity: 0.8;
   cursor: not-allowed;
 }
@@ -864,6 +890,138 @@ main section button.primary_button_link {
 main section button.primary_button_link:disabled {
   opacity: 0.8;
   cursor: not-allowed;
+}
+main form[data-create-test-form] {
+  margin-top: 6.25rem;
+  width: 100%;
+}
+main form[data-create-test-form]:invalid fieldset input.primary_button_link {
+  cursor: not-allowed;
+  opacity: 0.7;
+}
+main
+  form[data-create-test-form]:invalid
+  fieldset
+  input.primary_button_link:hover {
+  background: #5299c7;
+}
+main form[data-create-test-form] fieldset {
+  width: 60%;
+  max-width: 37.5rem;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+}
+main form[data-create-test-form] fieldset legend {
+  font-family: 'Outfit';
+  font-weight: normal;
+  font-size: 3.125rem;
+  line-height: 1.08;
+  color: white;
+  text-align: center;
+  text-transform: capitalize;
+  margin-bottom: 3.125rem;
+}
+main form[data-create-test-form] fieldset label {
+  display: none;
+}
+main form[data-create-test-form] fieldset input.primary_input_field {
+  background: white;
+}
+main form[data-create-test-form] fieldset div.option_wrapper {
+  margin-top: 0.9375rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+main
+  form[data-create-test-form]
+  fieldset
+  div.option_wrapper
+  input.primary_input_field {
+  display: inline-block;
+  width: 80%;
+}
+main
+  form[data-create-test-form]
+  fieldset
+  div.option_wrapper
+  input[type='radio'] {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: white;
+  width: 1.875rem;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
+  cursor: pointer;
+}
+main
+  form[data-create-test-form]
+  fieldset
+  div.option_wrapper
+  input[type='radio']:checked::before {
+  content: '';
+  display: inline-block;
+  background: #5299c7;
+  width: 1.4375rem;
+  aspect-ratio: 1/1;
+  position: absolute;
+  border-radius: 50%;
+}
+main form[data-create-test-form] fieldset input.primary_button_link {
+  padding: 1.5rem 0;
+  font-family: 'Roboto';
+  font-weight: normal;
+  font-size: 1.25rem;
+  line-height: 1.2;
+  cursor: pointer;
+}
+main form[data-create-test-form] fieldset input.primary_button_link:disabled {
+  cursor: not-allowed;
+  opacity: 0.7;
+}
+main form[data-create-test-form] fieldset label.img_input {
+  cursor: pointer;
+  position: relative;
+  margin: 1.5625rem 0;
+  padding: 1.5rem 0.9375rem;
+  border: #5299c7 dashed 3px;
+  border-radius: 1.5625rem;
+  cursor: pointer;
+  font-family: 'Roboto';
+  font-weight: normal;
+  font-size: 1.25rem;
+  line-height: 1.2;
+  transition: background 300ms ease-out;
+  display: flex;
+  justify-content: center;
+}
+main form[data-create-test-form] fieldset label.img_input:hover {
+  background: rgba(255, 255, 255, 0.253);
+}
+main form[data-create-test-form] fieldset label.img_input input[type='file'] {
+  display: inline-block;
+  margin: auto;
+  color: white;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+main
+  form[data-create-test-form]
+  fieldset
+  label.img_input
+  input[type='file']::file-selector-button {
+  all: unset;
+  display: inline-block;
+  padding: 0.9375rem 0.625rem;
+  color: white;
+  width: auto;
+  margin-right: 1.5625rem;
+  text-transform: capitalize;
+  background: #5299c7;
+  border-radius: 0.3125rem;
+  cursor: pointer;
 }
 
 /*------------------------------ Main End ------------------------------*/
@@ -1048,6 +1206,9 @@ footer div.spinner {
     font-size: 1.2rem;
     line-height: 1.2083333333;
   }
+  main form[data-create-test-form] fieldset {
+    width: 90%;
+  }
 }
 @media screen and (max-width: 730px) {
   header div.modal_container {
@@ -1060,13 +1221,19 @@ footer div.spinner {
     margin-left: auto;
     margin-right: auto;
   }
-  header div.modal_container div[data-authorization-modal] form div.form__btns {
+  header
+    div.modal_container
+    div[data-authorization-modal]
+    form
+    fieldset
+    div.form__btns {
     flex-direction: column;
   }
   header
     div.modal_container
     div[data-authorization-modal]
     form
+    fieldset
     div.form__btns
     div {
     align-self: flex-start;
@@ -1076,6 +1243,7 @@ footer div.spinner {
     div.modal_container
     div[data-authorization-modal]
     form
+    fieldset
     div.form__btns
     div
     button {
@@ -1085,6 +1253,7 @@ footer div.spinner {
     div.modal_container
     div[data-authorization-modal]
     form
+    fieldset
     div.form__btns
     input {
     width: 100%;
@@ -1093,6 +1262,7 @@ footer div.spinner {
     div.modal_container
     div[data-authorization-modal]
     form
+    fieldset
     div.form__btns
     input
     + div {
@@ -1123,6 +1293,7 @@ footer div.spinner {
     div.modal_container
     div[data-authorization-modal]
     form
+    fieldset
     input.primary_input_field {
     font-size: 1.25rem;
     line-height: 1.2;
@@ -1131,6 +1302,7 @@ footer div.spinner {
     div.modal_container
     div[data-authorization-modal]
     form
+    fieldset
     input.primary_input_field::-moz-placeholder {
     font-size: 1.25rem;
     line-height: 1.2;
@@ -1139,6 +1311,7 @@ footer div.spinner {
     div.modal_container
     div[data-authorization-modal]
     form
+    fieldset
     input.primary_input_field::placeholder {
     font-size: 1.25rem;
     line-height: 1.2;
@@ -1147,6 +1320,7 @@ footer div.spinner {
     div.modal_container
     div[data-authorization-modal]
     form
+    fieldset
     input.primary_input_field
     + input {
     margin-top: 2rem;
@@ -1155,6 +1329,7 @@ footer div.spinner {
     div.modal_container
     div[data-authorization-modal]
     form
+    fieldset
     div.form__btns
     div
     p {
@@ -1165,6 +1340,7 @@ footer div.spinner {
     div.modal_container
     div[data-authorization-modal]
     form
+    fieldset
     div.form__btns
     div
     button {
@@ -1175,6 +1351,7 @@ footer div.spinner {
     div.modal_container
     div[data-authorization-modal]
     form
+    fieldset
     div.form__btns
     input {
     font-size: 1.25rem;
@@ -1235,6 +1412,17 @@ footer div.spinner {
     line-height: 1.25;
   }
 }
+@media screen and (max-width: 565px) {
+  main section ul[data-question-balls] {
+    width: 100%;
+  }
+  main section ul[data-quizzes] {
+    width: 100%;
+  }
+  main section button.primary_button_link {
+    width: 100%;
+  }
+}
 @media screen and (max-width: 425px) {
   main ul.history__table li.history__table__row--primary h2 {
     font-size: 1rem;
@@ -1245,19 +1433,42 @@ footer div.spinner {
     font-size: 0.75rem;
     line-height: 1.3333333333;
   }
+  main form[data-create-test-form] fieldset legend {
+    font-size: 2.5rem;
+    line-height: 1.1;
+  }
+  main
+    form[data-create-test-form]
+    fieldset
+    div.option_wrapper
+    input.primary_input_field {
+    padding-left: 1.125rem;
+  }
+  main form[data-create-test-form] fieldset input {
+    font-size: 1rem;
+    line-height: 1.25;
+  }
+  main form[data-create-test-form] fieldset input::-moz-placeholder {
+    font-size: 1rem;
+    line-height: 1.25;
+  }
+  main form[data-create-test-form] fieldset input::placeholder {
+    font-size: 1rem;
+    line-height: 1.25;
+  }
+  main form[data-create-test-form] fieldset label.img_input input[type='file'] {
+    font-size: 0.9375rem;
+    line-height: 1.3333333333;
+  }
+  main
+    form[data-create-test-form]
+    fieldset
+    label.img_input
+    input[type='file']::file-selector-button {
+    margin-right: 1.25rem;
+  }
   footer ul.center li:first-of-type + li {
     margin-left: 1.5625rem;
-  }
-}
-@media screen and (max-width: 565px) {
-  main section ul[data-question-balls] {
-    width: 100%;
-  }
-  main section ul[data-quizzes] {
-    width: 100%;
-  }
-  main section button.primary_button_link {
-    width: 100%;
   }
 }
 @media screen and (max-width: 380px) {
@@ -1276,6 +1487,7 @@ footer div.spinner {
     div.modal_container
     div[data-authorization-modal]
     form
+    fieldset
     input.primary_input_field {
     font-size: 1rem;
     line-height: 1.25;
@@ -1284,6 +1496,7 @@ footer div.spinner {
     div.modal_container
     div[data-authorization-modal]
     form
+    fieldset
     input.primary_input_field::-moz-placeholder {
     font-size: 1rem;
     line-height: 1.25;
@@ -1292,6 +1505,7 @@ footer div.spinner {
     div.modal_container
     div[data-authorization-modal]
     form
+    fieldset
     input.primary_input_field::placeholder {
     font-size: 1rem;
     line-height: 1.25;
